# angband

./: CMakeLists.txt  README  configure.ac
src/: CMakeLists.txt  Makefile  Makefile.src  Makefile.std  init2.c  main.c  prefs.c
src/gtk-new/: gtk-common.h  gtk-drawing.c  gtk-drawing.h  gtk-menus.c  gtk-menus.h  gtk-term.c  gtk-term.h  gtk-windows.c  gtk-windows.h  main-gtk.c  main-gtk.h
